--- a/styles/map_page.css
+++ b/styles/map_page.css
@@ -2,17 +2,85 @@
 
 body{
     display: grid;
-    grid-template-columns: .5fr .5fr;
-    grid-template-areas: "mappanel sidepanel";
+    grid-template-rows: .2fr .8fr;
+    grid-template-columns: .65fr .35fr;
+    grid-template-areas: "top top" "leftpanel rightpanel";
     font-family: "Ropa Sans";
 }
 
-#mapArea{
-    height: 80vh;
-    grid-area: mappanel;
+#header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-area: top;
+    font-size: calc(40px + 0.8vw);
 }
 
-#contents{
+/* LEFT PANEL PROPERTIES */
+#leftPanel{
     display: grid;
-    grid-area: sidepanel;
+    grid-area: leftpanel;
+    grid-template-columns: 1fr;
+    grid-template-rows: .3fr .7fr;
+    grid-template-areas: "leftheader" "mapArea";
 }
+
+h1{
+    font-size: calc(20px + 0.8vw);
+}
+
+#leftHeader{
+    display: flex;
+    justify-content: center;
+    grid-area: leftheader;
+    font-size: calc(20px + 0.8vw);
+}
+
+#mapArea{
+    /* display: flex;
+    justify-content: center; */
+    height: 70vh;
+    grid-area: mapArea;
+}
+
+
+/* RIGHT PANEL PROPERTIES */
+#rightPanel{
+    display: grid;
+    grid-area: rightpanel;
+    grid-template-rows: .1fr .5fr .2fr;
+    grid-template-areas: "rightheader" "slides" "slidebuttons"; 
+    margin-left: calc(10px + 0.4vw);
+}
+
+#rightHeader{
+    display: flex;
+    justify-content: center;
+    grid-area: rightheader;
+}
+
+#slideshow{
+    display: flex;
+    justify-content: center;
+    margin: calc(20px + 0.8vw);
+    grid-area: slides;
+}
+
+#slideimg{
+    /* object-fit: contain; */
+    max-height: 300px;
+}
+
+#slideButtons{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    grid-area: slidebuttons;
+}
+
+button{
+    width: calc(150px + 0.4vw);
+    height: calc(20px + 0.4vw);
+}
+
