added markers, added explore location functionality. todos: animate buttons to make website smoother. maybe add more data points to prevent rerolling same location multiple times? can also consider playing around with different designs

--- a/styles/map_page.css
+++ b/styles/map_page.css
@@ -68,6 +68,7 @@ h1{
 
 #slideimg{
     /* object-fit: contain; */
+    max-width: 500px;
     max-height: 300px;
 }
 
@@ -82,5 +83,11 @@ h1{
 button{
     width: calc(150px + 0.4vw);
     height: calc(20px + 0.4vw);
+    background-color: #ededed;
+    border-color: black;
+    border: 1px solid;
+    font-family: "Ropa Sans";
+    letter-spacing: 0.05rem;
+    font-weight: bold;
+    cursor: pointer;
 }
-
