added alt image property. noticed some possible bugs

--- a/styles/map_page.css
+++ b/styles/map_page.css
@@ -36,6 +36,7 @@ h1{
     font-size: calc(20px + 0.8vw);
 }
 
+/* bug: height of map can look weird when changing view height */
 #mapArea{
     /* display: flex;
     justify-content: center; */
