--- a/styles/landing.css
+++ b/styles/landing.css
@@ -31,7 +31,7 @@ p{
 #bottom-area{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     grid-area: bottom;
 }
 
@@ -46,4 +46,9 @@ p{
     letter-spacing: 0.05rem;
     font-weight: bold;
     cursor: pointer;
+    margin-right: calc(100px + 0.8vw);
+}
+
+button:hover{
+    background-color: #cbcbcb;
 }
