--- a/styles/map_page.css
+++ b/styles/map_page.css
@@ -49,8 +49,8 @@ h1{
 #rightPanel{
     display: grid;
     grid-area: rightpanel;
-    grid-template-rows: .1fr .5fr .2fr;
-    grid-template-areas: "rightheader" "slides" "slidebuttons"; 
+    grid-template-rows: .1fr .5fr .1fr .1fr;
+    grid-template-areas: "rightheader" "slides" "slidebuttons" "story"; 
     margin-left: calc(10px + 0.4vw);
 }
 
@@ -63,14 +63,16 @@ h1{
 #slideshow{
     display: flex;
     justify-content: center;
-    margin: calc(20px + 0.8vw);
+    margin: 20px;
     grid-area: slides;
 }
 
 #slideimg{
-    /* object-fit: contain; */
-    max-width: 500px;
-    max-height: 300px;
+    object-fit: cover;
+    width: 400px;
+    height: 300px;
+    /* max-width: 500px;
+    max-height: 300px; */
 }
 
 #slideButtons{
@@ -79,6 +81,14 @@ h1{
     justify-content: space-evenly;
     align-items: center;
     grid-area: slidebuttons;
+}
+
+#story{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    grid-area: story;
 }
 
 button{
@@ -91,4 +101,12 @@ button{
     letter-spacing: 0.05rem;
     font-weight: bold;
     cursor: pointer;
+}
+
+button:hover{
+    background-color: #cbcbcb;
+}
+
+button:active{
+    background-color: #808080;
 }
